# construct-compiler

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/twist_vectors/: restriction_sites.json
docs/: plan_mcp_and_testing.md
evals/: prompt_corpus.yaml  prompt_corpus_v2.yaml  prompt_corpus_v3.yaml  run_eval.py  spec_generation_prompt.txt
evals/generated_specs/: basic_amylase.yaml  basic_antibody_fragment.yaml  basic_avidin.yaml  basic_beta_galactosidase.yaml  basic_calmodulin.yaml  basic_cerulean.yaml  basic_cytochrome.yaml  basic_eyfp.yaml  basic_gfp.yaml  basic_helicase.yaml  basic_high_expression.yaml  basic_inducible.yaml  basic_insulin.yaml  basic_interleukin.yaml  basic_kinase.yaml  basic_laccase.yaml  basic_low_expression.yaml  basic_luciferase_assay.yaml  basic_lysozyme.yaml  basic_minimal.yaml  basic_neon_green.yaml  basic_peroxidase.yaml  basic_polymerase.yaml  basic_protease.yaml  basic_rab_protein.yaml  basic_ruby.yaml  basic_scarlet.yaml  basic_t7_terminator.yaml  basic_tagbfp.yaml  basic_tdtomato.yaml  basic_tdtomato_flow.yaml  basic_thrombin.yaml  constraint_ampicillin.yaml  constraint_assembly_ggate.yaml  constraint_assembly_gibson.yaml  constraint_assembly_restriction.yaml  constraint_batch_size.yaml  constraint_budget.yaml  constraint_budget_tight.yaml  constraint_chloramphenicol.yaml  (+688 more)
examples/: his_tev_mbp_egfp.yaml  run_example.py
frontend/: index.html
scripts/: design_evaluate.py
src/construct_compiler/: __init__.py  __main__.py  mcp_server.py  server.py
src/construct_compiler/backends/: genbank.py
src/construct_compiler/core/: __init__.py  graph.py  parts.py  types.py
src/construct_compiler/data/: parts_db.py  vector_features.py
src/construct_compiler/frontend/: parser.py
src/construct_compiler/passes/: __init__.py  assembly_planning.py  constraint_resolution.py  part_resolution.py  pipeline.py  reverse_translation.py
src/construct_compiler/validation/: __init__.py  bio_checks.py  construct_checks.py  harness.py  (+1 more)
tests/: conftest.py  test_construct_validity.py  test_harness.py  test_harness_regression.py  test_harness_variants.py  test_idt_live.py  test_mcp_server.py
(+3 files in other folders)
